feat: profile enhancements
