# api/src/alumni/dto/classification-accepted-by-user.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ClassificationAcceptedByUserDto {
+  @ApiProperty({
+    description: 'Whether the job classification was accepted by the user',
+    type: Boolean,
+  })
+  wasAcceptedByUser: boolean;
+}
