# api/src/alumni/dto/index.ts
@@ -1,6 +1,7 @@
 export { CreateAlumniDto } from './create-alumni.dto';
 export { MarkAsReviewedDto } from './mark-alumni-as-reviewed.dto';
-export { BasicAlumniProfileDto } from './basic-alumni-profile.dto';
 export { NameDto } from './name-dto';
 export { GetGeoJSONDto } from '../../dto/get-geojson.dto';
 export { AlumniGeoJSONResponse } from './alumni-geojson.dto';
+export { SeniorityLevelAcceptedByUserDto } from './seniority-accepted-by-user.dto';
+export { ClassificationAcceptedByUserDto } from './classification-accepted-by-user.dto';
