# api/src/alumni/dto/seniority-accepted-by-user.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class SeniorityLevelAcceptedByUserDto {
+  @ApiProperty({
+    description: 'Whether the seniority level was accepted by the user',
+    type: Boolean,
+  })
+  wasSeniorityLevelAcceptedByUser: boolean;
+}
